--- a/Aurora-theme/lib/client/styles/dropdown.scss
+++ b/Aurora-theme/lib/client/styles/dropdown.scss
@@ -78,6 +78,7 @@
         font-weight: 400;
         margin-bottom: 0;
         padding: 0 1.5rem 0 1.25rem;
+        transition: color .5s;
 
         &:hover {
           color: var(--aurora-global-active-color);
